--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -7,6 +7,7 @@ This is the technical documentation for developers. One can find here every nece
 ---
 
 == Program entry
+link:base/main.adoc[main.adoc]
 
 The main function:
 
@@ -31,6 +32,7 @@ int main()
 
 
 == Logger class
+link:base/logger.adoc[logger.adoc]
 
 The logger class is responsible for logging the console output into a txt file.
 
@@ -42,12 +44,12 @@ The logger class is responsible for logging the console output into a txt file.
 ----
 class Logger
 {
-    public:
-        void log(String str);
+public:
+    void log(String str);
     
-    private:
-        FileType logfile;
-}
+private:
+    FileType logfile;
+};
 
 void Logger::log(String str)
 {
@@ -55,3 +57,40 @@ void Logger::log(String str)
     std::cout<<str<<std::endl;
 }
 ----
+
+
+
+== Game class
+link:base/game.adoc[game.adoc]
+
+This is the master class of the game.
+
+It is responsible of:
+
+* initializing the game by loading user settings
+* handling the game loop
+* handling the different screens
+* passing the inputs
+* updating the screens
+* rendering the screens
+
+.Game class
+[source, C++]
+----
+class Game
+{
+public:
+    Game();
+    void run();
+
+private:
+    void processEvents();
+    void update();
+    void render();
+
+private:
+    sf::RenderWindow mWindow;
+};
+----
+
+
