--- a/doc/base/game.adoc
+++ b/doc/base/game.adoc
@@ -4,7 +4,7 @@ This is the master class of the game.
 
 It is responsible of:
 
-* initializing the game by loading user settings
+* initializing the game by loading user settings (returns 1 if something went wrong)
 * handling the game loop
 * handling the different screens
 * passing the inputs
@@ -18,6 +18,7 @@ class Game
 {
 public:
     Game();
+    int init();
     void run();
 
 private:
