--- a/doc/base/logger.adoc
+++ b/doc/base/logger.adoc
@@ -8,7 +8,7 @@
 
 * link:../src/Logger.cpp[src/Logger.cpp]
 
-=== The logger class:
+=== The Logger class:
 
 * is responsible for logging the console output into a txt file
 
