add options to doc and fixed links

--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -53,7 +53,7 @@ int main()
 
 == Logger
 
-//link:base/logger.adoc[logger.adoc]
+link:base/logger.adoc[logger.adoc]
 
 === Files:
 
@@ -92,7 +92,7 @@ void Logger::log(String str)
 
 == Game
 
-//link:base/game.adoc[game.adoc]
+link:base/game.adoc[game.adoc]
 
 === Files:
 
@@ -134,6 +134,45 @@ private:
 private:
     sf::RenderWindow mWindow;
 };
+----
+
+
+
+== Options
+
+link:base/options.adoc[options.adoc]
+
+=== Files:
+
+* link:../include/Options.h[include/Options.h]
+
+* link:../src/Options.cpp[src/Options.cpp]
+
+=== The Options class:
+
+* stores the options variables
+
+* creates default settings on construction
+
+* can be linked to a file with load()
+
+* can store settings to the link file with save()
+
+.Options class
+[source, C++]
+----
+class Options
+{
+public:
+    Options();
+    void load();
+    void save();
+
+private:
+    Type1 mOption1;
+    Type2 mOption2;
+    ...
+}
 ----
 
 
