--- a/doc/base/logger.adoc
+++ b/doc/base/logger.adoc
@@ -4,9 +4,9 @@
 
 === Files:
 
-* link:../include/Logger.h[include/Logger.h]
+* link:../../include/Logger.h[include/Logger.h]
 
-* link:../src/Logger.cpp[src/Logger.cpp]
+* link:../../src/Logger.cpp[src/Logger.cpp]
 
 === The Logger class:
 
