--- a/doc/base/options.adoc
+++ b/doc/base/options.adoc
@@ -6,7 +6,7 @@
 
 * link:../include/Options.h[include/Options.h]
 
-* link:../src/Options.cpp[src/Options.cpp]
+* link:../../src/Options.cpp[src/Options.cpp]
 
 === The Options class:
 
