--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -8,7 +8,7 @@ This is the technical documentation for developers. One can find here every nece
 
 == Task list
 
-* [ ] main function
+* [x] main function
 
 * [x] Logger class
 
@@ -173,6 +173,46 @@ private:
     Type1 mOption1;
     Type2 mOption2;
     ...
+}
+----
+
+
+
+== Screen
+
+link:screens/screen.adoc[screen.adoc]
+
+=== Files:
+
+* link:../include/Screens/Screen.h[include/Screens/Screen.h]
+
+* link:../src/Screens/Screen.cpp[include/Screens/Screen.cpp]
+
+=== The Screen class:
+
+* is a virtual class
+
+* is the base class to create specific screens
+
+* can process events, update and render through the corresponding methods
+
+* can block further event processing, updates or renders or not (depend on screen type and cannot be changed)
+
+.Screen class
+[source, C++]
+----
+class Screen
+{
+public:
+    Screen();
+    virtual void processEvents();
+    virtual void update();
+    virtual void render();
+
+private:
+    const bool blockEvents;
+    const bool blockUpdate;
+    const bool blockRender;
 }
 ----
 
