updated task list

--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -16,6 +16,8 @@ This is the technical documentation for developers. One can find here every nece
 
 * [ ] Options class
 
+* [ ] Screen class
+
 
 
 == Program entry
