--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -220,9 +220,9 @@ private:
 
 
 
-== Resource management
+== Resource holding
 
-link:base/resources.adoc[resources.adoc]
+link:base/resourceHolder.adoc[resourceHolder.adoc]
 
 === Files:
 
