add resource mnagement doc and updated task list

--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -18,6 +18,10 @@ This is the technical documentation for developers. One can find here every nece
 
 * [ ] Screen class
 
+* [x] ResourceHolder class
+
+* [ ] ResourceManager class
+
 
 
 == Program entry
@@ -252,6 +256,48 @@ public:
 
 private:
     std::map<Identifier, std::unique_ptr<Resource>> mResourceMap;
+}
+----
+
+
+
+== Resource management
+
+link:base/resourceManager.adoc[resourceManager.adoc]
+
+=== Files:
+
+* link:../include/ResourceManager.h[include/ResourceManager.h]
+
+* link:../src/ResourceManager.cpp[src/ResourceManager.cpp]
+
+=== The ResourceManager class:
+
+* stores the different resource holding instances
+
+* passes the load requests by
+
+* passes the get requests by
+
+* manage resource types automaticaly
+
+.ResourceManager class
+[source, C++]
+----
+class ResourceManager
+{
+public:
+    ResourceManager(Logger& logger);
+    void load(Identifier_1 id_1, const std::string& filename);
+    void get(Identifier_1 id_1);
+    void load(Identifier_1 id_1, const std::string& filename);
+    void get(Identifier_1 id_1);
+    ...
+
+private:
+    ResourceHolder<Resource_1, Identifier_1> Resource_1Holder;
+    ResourceHolder<Resource_2, Identifier_2> Resource_2Holder;
+    ...
 }
 ----
 
