--- a/doc/base/resourceManager.adoc
+++ b/doc/base/resourceManager.adoc
@@ -32,8 +32,8 @@ public:
     ...
 
 private:
-    ResourceHolder<Resource_1, Identifier_1> Resource_1Holder;
-    ResourceHolder<Resource_2, Identifier_2> Resource_2Holder;
+    ResourceHolder<Resource_1, Identifier_1> mResource_1Holder;
+    ResourceHolder<Resource_2, Identifier_2> mResource_2Holder;
     ...
 }
 ----
