--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -289,9 +289,9 @@ class ResourceManager
 public:
     ResourceManager(Logger& logger);
     void load(Identifier_1 id_1, const std::string& filename);
-    void get(Identifier_1 id_1);
-    void load(Identifier_1 id_1, const std::string& filename);
-    void get(Identifier_1 id_1);
+    const Resource_1& get(Identifier_1 id_1) const;
+    void load(Identifier_2 id_2, const std::string& filename);
+    const Resource_2& get(Identifier_2 id_2) const;
     ...
 
 private:
