--- a/doc/screens/loadingScreen.adoc
+++ b/doc/screens/loadingScreen.adoc
@@ -4,9 +4,9 @@
 
 === Files:
 
-* link:../../include/LoadingScreen.h[include/LoadingScreen.h]
+* link:../../include/Screens/LoadingScreen.h[include/LoadingScreen.h]
 
-* link:../../src/LoadingScreen.cpp[src/LoadingScreen.cpp]
+* link:../../src/Screens/LoadingScreen.cpp[src/LoadingScreen.cpp]
 
 === The LoadingScreen class:
 
