add init method to loading screen class

--- a/doc/screens/loadingScreen.adoc
+++ b/doc/screens/loadingScreen.adoc
@@ -27,6 +27,7 @@ class LoadingScreen : public Screen
 {
 public:
     LoadingScreen();
+    void init();
     void processEvents();
     void update();
     void render();
