--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -335,6 +335,7 @@ class LoadingScreen : public Screen
 {
 public:
     LoadingScreen();
+    void init();
     void processEvents();
     void update();
     void render();
