--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -4,7 +4,7 @@
 
 This is the technical documentation for developers. One can find here every necessary info on the code that has been written and the one to write.
 
-:toc: left
+:toc:
 
 ---
 
