fixed synthax 'public'

--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -518,7 +518,7 @@ link:screens/menuScreen.adoc[menuScreen.adoc]
 .MenuScreen class
 [source, C++]
 ----
-class MenuScreen : publc Screen
+class MenuScreen : public Screen
 {
 public:
     MenuScreen();
