--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -440,7 +440,7 @@ link:misc/task.adoc[task.adoc]
 
 * is virtual
 
-* giva access to an identifier and a filename
+* is empty
 
 .Task class
 [source, C++]
@@ -448,8 +448,7 @@ link:misc/task.adoc[task.adoc]
 class Task
 {
 public:
-    virtual auto getId();
-    virtual std::string& getFileName();
+    virtual ~Task();
 };
 ----
 
