add widget class hierarchy to doc

--- a/doc/documentation.adoc
+++ b/doc/documentation.adoc
@@ -662,4 +662,20 @@ private:
 void Anchors::anchor(Widget& widget, const RenderTarget& target, Anchors::Flags flag);
 ----
 
+=== Widget class hierarchy
+
+* Widget
+
+** VBoxLayout
+
+** HBoxLayout
+
+** ProgressBar
+
+** AButton
+
+*** SpriteButton
+
+*** TextButton
+
 
